Fixed overflow issue causing a bottom nav bar

--- a/public/css/cts.css
+++ b/public/css/cts.css
@@ -1,6 +1,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden !important;
 }
 
 @font-face {
